--- a/Greip/Base.lproj/Main.storyboard
+++ b/Greip/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="l6d-Ks-N5c">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="l6d-Ks-N5c">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -193,79 +193,68 @@
                                         <color key="textColor" red="0.93809878830000004" green="0.0" blue="0.42589530349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEj-ZQ-Qlx">
-                                        <attributedString key="attributedText">
-                                            <fragment content="Bacon ipsum dolor amet strip steak doner t-bone chicken tail, picanha leberkas venison sirloin drumstick pastrami ham hock.">
-                                                <attributes>
-                                                    <color key="NSColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <font key="NSFont" metaFont="system" size="16"/>
-                                                </attributes>
-                                            </fragment>
-                                        </attributedString>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Postad av någon" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qQ-7v-0iD">
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                                         <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Ballerup" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gan-bs-Tsc">
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEj-ZQ-Qlx">
+                                        <rect key="frame" x="24" y="364" width="343" height="58"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <attributedString key="attributedText"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="4qQ-7v-0iD" firstAttribute="top" secondItem="mEj-ZQ-Qlx" secondAttribute="bottom" constant="8" id="J1x-w8-RQD"/>
-                                    <constraint firstAttribute="bottom" secondItem="4qQ-7v-0iD" secondAttribute="bottom" constant="20" id="PvR-fL-mIh"/>
+                                    <constraint firstItem="gan-bs-Tsc" firstAttribute="leading" secondItem="VG0-3e-ldU" secondAttribute="leading" id="1Gz-M8-igs"/>
+                                    <constraint firstAttribute="bottom" secondItem="4qQ-7v-0iD" secondAttribute="bottom" constant="20" id="4F7-V8-jDk"/>
+                                    <constraint firstItem="gan-bs-Tsc" firstAttribute="centerX" secondItem="8Or-xk-947" secondAttribute="centerX" id="5xd-YC-j0V"/>
                                     <constraint firstItem="VG0-3e-ldU" firstAttribute="top" secondItem="8Or-xk-947" secondAttribute="top" constant="16" id="WUF-Vq-j2b"/>
                                     <constraint firstItem="VG0-3e-ldU" firstAttribute="centerX" secondItem="8Or-xk-947" secondAttribute="centerX" id="Xyw-WH-Xjj"/>
-                                    <constraint firstAttribute="trailing" secondItem="VG0-3e-ldU" secondAttribute="trailing" constant="16" id="YSH-ai-UME"/>
+                                    <constraint firstItem="VG0-3e-ldU" firstAttribute="trailing" secondItem="8Or-xk-947" secondAttribute="trailing" constant="-16" id="YSH-ai-UME"/>
                                     <constraint firstItem="VG0-3e-ldU" firstAttribute="leading" secondItem="8Or-xk-947" secondAttribute="leading" constant="16" id="YZf-Go-kZv"/>
-                                    <constraint firstItem="VG0-3e-ldU" firstAttribute="leading" secondItem="mEj-ZQ-Qlx" secondAttribute="leading" id="ZpH-Sf-Ay2"/>
-                                    <constraint firstItem="mEj-ZQ-Qlx" firstAttribute="top" secondItem="VG0-3e-ldU" secondAttribute="bottom" constant="8.5" id="eEO-4H-HEQ"/>
-                                    <constraint firstItem="mEj-ZQ-Qlx" firstAttribute="centerX" secondItem="8Or-xk-947" secondAttribute="centerX" id="q69-Xx-8ha"/>
-                                    <constraint firstAttribute="trailing" secondItem="4qQ-7v-0iD" secondAttribute="trailing" constant="16" id="yae-hg-A3h"/>
+                                    <constraint firstItem="4qQ-7v-0iD" firstAttribute="top" secondItem="gan-bs-Tsc" secondAttribute="bottom" id="sZx-5i-cJT"/>
+                                    <constraint firstItem="gan-bs-Tsc" firstAttribute="top" secondItem="VG0-3e-ldU" secondAttribute="bottom" constant="8" id="y3U-dz-JMI"/>
+                                    <constraint firstItem="4qQ-7v-0iD" firstAttribute="trailing" secondItem="8Or-xk-947" secondAttribute="trailing" constant="-16" id="yae-hg-A3h"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="subviews">
                                         <exclude reference="VG0-3e-ldU"/>
-                                        <exclude reference="mEj-ZQ-Qlx"/>
                                         <exclude reference="4qQ-7v-0iD"/>
+                                        <exclude reference="mEj-ZQ-Qlx"/>
                                     </mask>
                                     <mask key="constraints">
-                                        <exclude reference="J1x-w8-RQD"/>
-                                        <exclude reference="PvR-fL-mIh"/>
-                                        <exclude reference="yae-hg-A3h"/>
                                         <exclude reference="WUF-Vq-j2b"/>
                                         <exclude reference="Xyw-WH-Xjj"/>
                                         <exclude reference="YSH-ai-UME"/>
                                         <exclude reference="YZf-Go-kZv"/>
-                                        <exclude reference="ZpH-Sf-Ay2"/>
-                                        <exclude reference="eEO-4H-HEQ"/>
-                                        <exclude reference="q69-Xx-8ha"/>
+                                        <exclude reference="yae-hg-A3h"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="subviews">
                                         <include reference="VG0-3e-ldU"/>
-                                        <include reference="mEj-ZQ-Qlx"/>
                                         <include reference="4qQ-7v-0iD"/>
+                                        <include reference="mEj-ZQ-Qlx"/>
                                     </mask>
                                     <mask key="constraints">
-                                        <include reference="J1x-w8-RQD"/>
-                                        <include reference="PvR-fL-mIh"/>
-                                        <include reference="yae-hg-A3h"/>
                                         <include reference="WUF-Vq-j2b"/>
                                         <include reference="Xyw-WH-Xjj"/>
                                         <include reference="YSH-ai-UME"/>
                                         <include reference="YZf-Go-kZv"/>
-                                        <include reference="ZpH-Sf-Ay2"/>
-                                        <include reference="eEO-4H-HEQ"/>
-                                        <include reference="q69-Xx-8ha"/>
+                                        <include reference="yae-hg-A3h"/>
                                     </mask>
                                 </variation>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="8Or-xk-947" secondAttribute="trailing" id="25r-70-ugV"/>
-                            <constraint firstItem="Jo8-uy-Ci6" firstAttribute="top" secondItem="8Or-xk-947" secondAttribute="bottom" id="Rqb-Sk-gSb"/>
+                            <constraint firstItem="8Or-xk-947" firstAttribute="trailing" secondItem="Nw4-lX-ylT" secondAttribute="trailing" id="25r-70-ugV"/>
+                            <constraint firstItem="8Or-xk-947" firstAttribute="bottom" secondItem="Jo8-uy-Ci6" secondAttribute="top" id="Rqb-Sk-gSb"/>
                             <constraint firstItem="8Or-xk-947" firstAttribute="top" secondItem="Oq9-oH-Jcj" secondAttribute="bottom" id="uyu-SL-zbO"/>
                             <constraint firstItem="8Or-xk-947" firstAttribute="leading" secondItem="Nw4-lX-ylT" secondAttribute="leading" id="vBm-4Y-I5F"/>
                         </constraints>
@@ -294,7 +283,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Dataflödet" id="pcI-eX-pe2"/>
                     <connections>
-                        <outlet property="content" destination="mEj-ZQ-Qlx" id="9wC-F6-sNd"/>
+                        <outlet property="content" destination="gan-bs-Tsc" id="uaA-oD-8X5"/>
                         <outlet property="meta" destination="4qQ-7v-0iD" id="rKF-xt-Qbf"/>
                         <outlet property="postTitle" destination="VG0-3e-ldU" id="Ae1-ut-JaM"/>
                     </connections>
